# Cripto

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Administrator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create  create.cpp  encryptions.cpp  encryptions.h
Administrator/Proj/CA/: root-ca.key
Administrator/Proj/Clients/1/: client-cert.csr  client-key.pem  client-pubkey.pem  root-ca.srl
Administrator/Proj/Clients/2/: client-cert.csr  client-key.pem  client-pubkey.pem  root-ca.srl
Administrator/Proj/Clients/3/: client-cert.crt  client-cert.csr  client-key.pem  client-pubkey.pem  root-ca.crt  root-ca.srl
Administrator/Proj/Server/: root-ca.srl  server-cert.crt  server-cert.csr  server-key.pem
Administrator/Proj/Server/1/: client-cert.crt
Administrator/Proj/Server/2/: client-cert.crt
Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input.cpp  input.h  main.cpp  main.h
Client/encryptions/data/: data_encryption.cpp
Client/encryptions/database/: database_encryption.cpp  database_encryption.h
Client/executable/: command.txt  cripto
Proj/CA/: root-ca.crt  root-ca.key
Proj/Clients/1/: client-cert.csr  client-cert.pem  client-key.pem  root-ca.srl
Proj/Clients/2/: client-cert.csr  client-cert.pem  client-key.pem  client-pubkey.pem  root-ca.srl  (+1 more)
Proj/Server/: root-ca.srl  server-cert.csr  server-key.pem
Server/: CMakeCache.txt  CMakeLists.txt  Makefile  bd.cpp  bd.h  cmake_install.cmake  main.cpp  main.h
Server/executable/: cripto
Server/processing/: data_processing.cpp  data_processing.h
(+8 files in other folders)
